# AI-Engineer-Test

./: .env  .gitignore  Dockerfile  README.md  amostras.xlsx  main.py  pyproject.toml  unit_tests.py
app/: settings.py
app/api/loaders/: data_loaders.py
app/api/routers/: chatbot.py
